# freesmartphone.github.io

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  index.html  mkdocs.yml
about/: index.html
contribute/: index.html
docs/: CNAME  about.md  contribute.md  history.md  implementations.md  index.md  pim-intro.md  specifications.md  usage-intro.md
docs/specs/: README.md  org.freesmartphone.Audio.Manager.md  org.freesmartphone.Context.Client.md  org.freesmartphone.Context.Manager.md  org.freesmartphone.Data.World.md  org.freesmartphone.Device.AmbientLight.md  org.freesmartphone.Device.Audio.md  org.freesmartphone.Device.Display.md  org.freesmartphone.Device.IdleNotifier.md  org.freesmartphone.Device.Info.md  org.freesmartphone.Device.Input.md  org.freesmartphone.Device.LED.md  org.freesmartphone.Device.Orientation.md  org.freesmartphone.Device.PowerControl.md  org.freesmartphone.Device.PowerSupply.md  org.freesmartphone.Device.Proximity.md  org.freesmartphone.Device.RealtimeClock.md  org.freesmartphone.Device.Vibrator.md  org.freesmartphone.Error.md  org.freesmartphone.Events.md  org.freesmartphone.GSM.CB.md  org.freesmartphone.GSM.Call.md  org.freesmartphone.GSM.CallForwarding.md  org.freesmartphone.GSM.Debug.md  org.freesmartphone.GSM.Device.md  org.freesmartphone.GSM.Error.md  org.freesmartphone.GSM.HZ.md  org.freesmartphone.GSM.MUX.md  org.freesmartphone.GSM.Monitor.md  org.freesmartphone.GSM.Network.md  org.freesmartphone.GSM.PDP.md  org.freesmartphone.GSM.SIM.md  org.freesmartphone.GSM.SMS.md  org.freesmartphone.GSM.VoiceMail.md  org.freesmartphone.Info.md  org.freesmartphone.Network.md  org.freesmartphone.Notification.md  org.freesmartphone.PIM.Call.md  org.freesmartphone.PIM.CallQuery.md  org.freesmartphone.PIM.Calls.md  (+24 more)
fso-mediawiki-export/: AlsaScenarios.md  Architecture.md  Aurora.md  Brainstorming.md  CBS.md  Community_Resources.md  Community_infrastructure.md  Cornucopia.md  DBus_API_Style_Guide.md  Donate.md  Example_FSO_plugin.md  FSOSHRCON_2011.md  FSOSHRCON_2011_AGENDA.md  Feb11PRDraft.md  GPS.md  GSM.md  GSoC_Ideas.md  Genuflections.md  HTC_Dream.md  HW_Platforms.md  Hardware.md  HardwareComparison.md  HardwareComparisonSimplified.md  IMEI.md  IMSI.md  Implementations.md  Infrastructure.md  Licensing.md  Licensing_proposal.md  Main_Page.md  Manifesto.md  Meeting_2008-11-13_Braunschweig.md  Meeting_2008-12-18_Braunschweig.md  Modems.md  N900_Old_overview.md  Networks.md  Nokia900_Kernels.md  PalmPreGSM.md  Palm_Pre.md  Palm_Pre:NFS-Root.md  (+27 more)
history/: index.html
implementations/: index.html
pim-intro/: index.html
site/: index.html
specifications/: index.html
tools/: makedoc.py
usage-intro/: index.html
(+214 files in other folders)
